implemented JSCScrollView (see bug 1871460 however). beautified JSCRangeSlider

--- a/SuperCollider/Help/SwingOSC/JSCScrollTopView.html
+++ b/SuperCollider/Help/SwingOSC/JSCScrollTopView.html
@@ -10,38 +10,36 @@
 p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
 p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
 p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; min-height: 12.0px}
-p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #53649d}
-p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #53649d; min-height: 14.0px}
+p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #55659b}
+p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #55659b; min-height: 14.0px}
 p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Helvetica}
 p.p7 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 14.0px Helvetica}
 p.p8 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helvetica; min-height: 14.0px}
 p.p9 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helvetica}
 p.p10 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco}
 p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; min-height: 14.0px}
-p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #902f20}
-p.p13 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #5b4132}
-p.p14 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #000000; min-height: 14.0px}
-p.p15 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #000000}
-p.p16 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #007300}
-p.p17 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco}
-p.p18 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #7a3827}
-p.p19 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #7a3827; min-height: 14.0px}
+p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #843424}
+p.p13 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #574233}
+p.p14 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #2b6f11}
+p.p15 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco}
+p.p16 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #723b2a}
+p.p17 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #723b2a; min-height: 14.0px}
 span.s1 {font: 18.0px Helvetica}
 span.s2 {color: #000000}
-span.s3 {text-decoration: underline ; color: #4c5c91}
-span.s4 {color: #53639a}
-span.s5 {color: #53649d}
-span.s6 {font: 10.0px Monaco; color: #2c4796}
-span.s7 {color: #5165a2}
-span.s8 {color: #5167aa}
-span.s9 {color: #4e69b8}
-span.s10 {color: #062cb0}
-span.s11 {color: #2c4796}
-span.s12 {color: #5b4132}
-span.s13 {color: #0000bf}
-span.s14 {color: #007300}
+span.s3 {text-decoration: underline ; color: #4e5d8f}
+span.s4 {color: #556498}
+span.s5 {color: #55659b}
+span.s6 {font: 10.0px Monaco; color: #304993}
+span.s7 {color: #54669f}
+span.s8 {color: #5469a7}
+span.s9 {color: #526bb5}
+span.s10 {color: #0d32ac}
+span.s11 {color: #304993}
+span.s12 {color: #574233}
+span.s13 {color: #0019ba}
+span.s14 {color: #2b6f11}
 span.s15 {color: #606060}
-span.s16 {color: #1337a8}
+span.s16 {color: #193ba4}
 span.Apple-tab-span {white-space:pre}
 </style>
 </head>
@@ -99,7 +97,7 @@ span.Apple-tab-span {white-space:pre}
 <p class="p7"><b>Examples</b></p>
 <p class="p3"><br></p>
 <p class="p10">g.reboot;</p>
-<p class="p10">g.dumpOSC(1);</p>
+<p class="p10">g.dumpOSC(1); g.stopAliveThread;</p>
 <p class="p11"><br></p>
 <p class="p10">(</p>
 <p class="p12"><span class="s2">w = </span><span class="s10">JSCWindow</span><span class="s2">( scroll: </span><span class="s10">true</span><span class="s2"> ); </span>// you must set this when the window is created</p>
@@ -111,32 +109,32 @@ span.Apple-tab-span {white-space:pre}
 <p class="p11"><br></p>
 <p class="p13">g.sendMsg( '/method', w.view.id, \invalidate );</p>
 <p class="p10">d = <span class="s11">JSCSlider</span>( w, <span class="s11">Rect</span>( 1500, 40, 100, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
-<p class="p14"><br></p>
+<p class="p11"><br></p>
 <p class="p10">d.remove;</p>
-<p class="p14"><br></p>
-<p class="p15">x = <span class="s13">JavaObject</span>.basicNew( w.view.id, w.view.server );</p>
+<p class="p11"><br></p>
+<p class="p10">x = <span class="s13">JavaObject</span>.basicNew( w.view.id, w.view.server );</p>
 <p class="p10">x.validate;</p>
 <p class="p10">x.revalidate;</p>
-<p class="p14"><br></p>
-<p class="p14"><br></p>
-<p class="p14"><br></p>
+<p class="p11"><br></p>
+<p class="p11"><br></p>
+<p class="p11"><br></p>
 <p class="p10">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\revalidate</span> );</p>
-<p class="p14"><br></p>
-<p class="p15">y = <span class="s13">JavaObject</span>.newFrom( x, <span class="s14">\getParent</span> );</p>
-<p class="p15">x.validate;</p>
-<p class="p15">y.validate;</p>
-<p class="p15">x.repaint;</p>
+<p class="p11"><br></p>
+<p class="p10">y = <span class="s13">JavaObject</span>.newFrom( x, <span class="s14">\getParent</span> );</p>
+<p class="p10">x.validate;</p>
+<p class="p10">y.validate;</p>
+<p class="p10">x.repaint;</p>
 <p class="p10">y.repaint;</p>
-<p class="p14"><br></p>
-<p class="p15">g.sendMsg( '/print', y.id );</p>
-<p class="p15">g.sendMsg( <span class="s14">'/print'</span>, w.view.id );</p>
-<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\validate</span> );</p>
-<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\revalidate</span> );</p>
-<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\repaint</span> );</p>
-<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\repaint</span> );</p>
-<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\validate</span> );</p>
-<p class="p16"><span class="s2">g.sendMsg( </span>'/local'<span class="s2">, </span>\test<span class="s2">, </span>'['<span class="s2">, </span>'/method'<span class="s2">, </span><span class="s15">"vp"</span><span class="s2"> ++ w.view.id, </span>\getPreferredSize<span class="s2">, </span>']'<span class="s2"> );</span></p>
-<p class="p15">g.sendMsg( <span class="s14">'/print'</span>, <span class="s14">\test</span> );</p>
+<p class="p11"><br></p>
+<p class="p10">g.sendMsg( '/print', y.id );</p>
+<p class="p10">g.sendMsg( <span class="s14">'/print'</span>, w.view.id );</p>
+<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\validate</span> );</p>
+<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\revalidate</span> );</p>
+<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\repaint</span> );</p>
+<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\repaint</span> );</p>
+<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\validate</span> );</p>
+<p class="p14"><span class="s2">g.sendMsg( </span>'/local'<span class="s2">, </span>\test<span class="s2">, </span>'['<span class="s2">, </span>'/method'<span class="s2">, </span><span class="s15">"vp"</span><span class="s2"> ++ w.view.id, </span>\getPreferredSize<span class="s2">, </span>']'<span class="s2"> );</span></p>
+<p class="p10">g.sendMsg( <span class="s14">'/print'</span>, <span class="s14">\test</span> );</p>
 <p class="p10">e = <span class="s11">JSCRangeSlider</span>( w, <span class="s11">Rect</span>( 1500, 80, 100, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
 <p class="p13">e.bounds</p>
 <p class="p10">d.bounds</p>
@@ -154,15 +152,16 @@ span.Apple-tab-span {white-space:pre}
 <p class="p10">e.resize=5</p>
 <p class="p10">w.view.refresh</p>
 <p class="p11"><br></p>
-<p class="p17">w.view.action = { arg ... args; args.postln };</p>
-<p class="p17">w.view.visibleOrigin;</p>
-<p class="p17">c.bounds;</p>
-<p class="p17">w.view.innerBounds;</p>
+<p class="p15">w.view.action = { arg ... args; args.postln };</p>
+<p class="p15">w.view.visibleOrigin;</p>
+<p class="p15">c.bounds;</p>
+<p class="p15">w.view.innerBounds;</p>
+<p class="p15">w.view.bounds;</p>
 <p class="p11"><br></p>
-<p class="p18">// doesn't work</p>
-<p class="p18">// w.drawHook = { JPen.fillRect( Rect( 10, 10, 100, 100 ))};</p>
-<p class="p19"><br></p>
-<p class="p18">// w.view.background = Color.clear;</p>
+<p class="p16">// doesn't work</p>
+<p class="p16">// w.drawHook = { JPen.fillRect( Rect( 10, 10, 100, 100 ))};</p>
+<p class="p17"><br></p>
+<p class="p16">// w.view.background = Color.clear;</p>
 <p class="p11"><br></p>
 <p class="p10">i = <span class="s11">JSCUserView</span>( w, <span class="s11">Rect</span>( 120, 160, 200, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
 <p class="p10">i.drawFunc = { <span class="s16">arg</span> v; <span class="s16">JPen</span>.fillRect( v.bounds )};</p>
@@ -174,8 +173,8 @@ span.Apple-tab-span {white-space:pre}
 <p class="p13">e.resize = 5;</p>
 <p class="p10">w.view.background_( Color.green );</p>
 <p class="p10">e.background_( Color.red );</p>
-<p class="p18">//w.view.opaque=false;</p>
-<p class="p18">//w.view.opaque=true;</p>
+<p class="p16">//w.view.opaque=false;</p>
+<p class="p16">//w.view.opaque=true;</p>
 <p class="p10">e.bounds;</p>
 <p class="p11"><br></p>
 <p class="p13"><span class="s2">f = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 40, 80, 100, 30 )); </span>// a horizontal scroller appears</p>
