--- a/SuperCollider/Help/SwingOSC/JSCScrollView.html
+++ b/SuperCollider/Help/SwingOSC/JSCScrollView.html
@@ -16,18 +16,19 @@ p.p6 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helve
 p.p7 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helvetica; min-height: 14.0px}
 p.p8 {margin: 0.0px 0.0px 0.0px 85.0px; text-indent: -85.0px; font: 12.0px Helvetica}
 p.p9 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 14.0px Helvetica}
-p.p10 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco}
-p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #573c2a}
-p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #5d3a29}
-p.p13 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #573c2a; min-height: 12.0px}
+p.p10 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #000000}
+p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #000000; min-height: 12.0px}
+p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #bf0000}
+p.p13 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco}
 span.s1 {font: 18.0px Helvetica}
-span.s2 {text-decoration: underline ; color: #083aec}
-span.s3 {text-decoration: underline ; color: #2646b6}
-span.s4 {color: #083aec}
-span.s5 {color: #294cc5}
-span.s6 {color: #1b3897}
+span.s2 {text-decoration: underline ; color: #1142e6}
+span.s3 {text-decoration: underline ; color: #2b4ab2}
+span.s4 {color: #1142e6}
+span.s5 {color: #2e50c1}
+span.s6 {color: #0000bf}
 span.s7 {color: #000000}
-span.s8 {color: #573c2a}
+span.s8 {color: #bf0000}
+span.s9 {color: #606060}
 span.Apple-tab-span {white-space:pre}
 </style>
 </head>
@@ -70,113 +71,113 @@ span.Apple-tab-span {white-space:pre}
 <p class="p3"><br></p>
 <p class="p10">(</p>
 <p class="p10">a = <span class="s6">JSCWindow</span>.new;</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">b = <span class="s6">JSCScrollView</span>(a, <span class="s6">Rect</span>(0,0,150,100));</p>
 <p class="p10">c = <span class="s6">JSC2DSlider</span>(b, <span class="s6">Rect</span>(0,0,100,100));<span class="Apple-tab-span">	</span></p>
 <p class="p10">d = <span class="s6">JSC2DSlider</span>(b, <span class="s6">Rect</span>(100,0,100,100));</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">a.front;</p>
 <p class="p10">)</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">a.view.background = <span class="s6">Color</span>.white;</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">b.background = <span class="s6">Color</span>.grey;</p>
-<p class="p3"><br></p>
-<p class="p11"><span class="s7">d.bounds = </span><span class="s6">Rect</span><span class="s7">(100,0,1000,100); </span>// the 'canvas' grows to accomodate it</p>
-<p class="p3"><br></p>
-<p class="p11"><span class="s7">b.resize = 5; </span>// the ScrollView resizes, but not its contents</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
+<p class="p12"><span class="s7">d.bounds = </span><span class="s6">Rect</span><span class="s7">(100,0,1000,100); </span>// the 'canvas' grows to accomodate it</p>
+<p class="p11"><br></p>
+<p class="p12"><span class="s7">b.resize = 5; </span>// the ScrollView resizes, but not its contents</p>
+<p class="p11"><br></p>
 <p class="p10">b.hasBorder_(<span class="s6">true</span>);</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">b.hasBorder_(<span class="s6">false</span>);</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">b.visibleOrigin;</p>
-<p class="p3"><br></p>
-<p class="p11"><span class="s7">b.visibleOrigin = </span><span class="s6">Point</span><span class="s7">(2000, 0); </span>// clips to the bounds of its contents</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
+<p class="p12"><span class="s7">b.visibleOrigin = </span><span class="s6">Point</span><span class="s7">(2000, 0); </span>// clips to the bounds of its contents</p>
+<p class="p11"><br></p>
 <p class="p10">b.hasHorizontalScroller_(<span class="s6">false</span>);</p>
 <p class="p10">b.hasHorizontalScroller_(<span class="s6">true</span>);</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">b.hasVerticalScroller_(<span class="s6">true</span>);</p>
 <p class="p10">b.hasVerticalScroller_(<span class="s6">false</span>);</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">b.autohidesScrollers_(<span class="s6">false</span>);</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">a.close;</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p12">/////////////////</p>
-<p class="p13"><br></p>
-<p class="p11">// force a 'canvas' size</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
+<p class="p12">// force a 'canvas' size</p>
+<p class="p11"><br></p>
 <p class="p10">(</p>
 <p class="p10">a = <span class="s6">JSCWindow</span>.new;</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">b = <span class="s6">JSCScrollView</span>(a, <span class="s6">Rect</span>(0, 0, 300, 300)).hasBorder_(<span class="s6">true</span>);</p>
 <p class="p10">c = <span class="s6">JSCCompositeView</span>(b, <span class="s6">Rect</span>(0, 0, 500, 500)); <span class="s8">// 'canvas' is this big</span></p>
-<p class="p11"><span class="s7">c.decorator = </span><span class="s6">FlowLayout</span><span class="s7">(c.bounds); </span>// now we can use a decorator</p>
-<p class="p3"><span class="Apple-tab-span">	</span></p>
+<p class="p12"><span class="s7">c.decorator = </span><span class="s6">FlowLayout</span><span class="s7">(c.bounds); </span>// now we can use a decorator</p>
+<p class="p11"><span class="Apple-tab-span">	</span></p>
 <p class="p10"><span class="s6">JSC2DSlider</span>(c, <span class="s6">Rect</span>(0, 0, 240, 240));</p>
 <p class="p10"><span class="s6">JSC2DSlider</span>(c, <span class="s6">Rect</span>(0, 0, 240, 240));</p>
 <p class="p10"><span class="s6">JSC2DSlider</span>(c, <span class="s6">Rect</span>(0, 0, 240, 240));</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">c.decorator.nextLine;</p>
 <p class="p10">a.front;</p>
 <p class="p10">)</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p12">/////////////////</p>
-<p class="p13"><br></p>
-<p class="p11">// "rulers", using an action function</p>
+<p class="p11"><br></p>
+<p class="p12">// "rulers", using an action function</p>
 <p class="p3"><br></p>
-<p class="p10">(</p>
-<p class="p10">var drawFunc;</p>
+<p class="p13">(</p>
+<p class="p10"><span class="s6">var</span> drawFunc;</p>
 <p class="p10">w = <span class="s6">JSCWindow</span>.new;</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">a = <span class="s6">JSCScrollView</span>(w, <span class="s6">Rect</span>(40, 40, 300, 300)).resize_( 5 );</p>
 <p class="p10">b = <span class="s6">JSCScrollView</span>(w, <span class="s6">Rect</span>(0, 40, 40, 300)).resize_( 4 ).hasHorizontalScroller_(<span class="s6">false</span>).hasVerticalScroller_(<span class="s6">false</span>)</p>
-<p class="p10"><span class="Apple-tab-span">	</span>.autoScrolls_(false);</p>
+<p class="p10"><span class="Apple-tab-span">	</span>.autoScrolls_(<span class="s6">false</span>);</p>
 <p class="p10">c = <span class="s6">JSCScrollView</span>(w, <span class="s6">Rect</span>(40, 0, 300, 40)).resize_( 2 ).hasHorizontalScroller_(<span class="s6">false</span>).hasVerticalScroller_(<span class="s6">false</span>)</p>
-<p class="p10"><span class="Apple-tab-span">	</span>.autoScrolls_(false);</p>
-<p class="p10">b.background = Color.grey;</p>
-<p class="p10">c.background = Color.grey;</p>
-<p class="p3"><br></p>
-<p class="p10">d = JSCUserView(a, <span class="s6">Rect</span>(0, 0, 620, 620));</p>
-<p class="p10">e = JSCUserView(b, <span class="s6">Rect</span>(0, 0, 40, 630));</p>
-<p class="p10">f = JSCUserView(c, <span class="s6">Rect</span>(0, 0, 630, 40));</p>
-<p class="p3"><br></p>
-<p class="p10">a.action = { var origin;</p>
+<p class="p10"><span class="Apple-tab-span">	</span>.autoScrolls_(<span class="s6">false</span>);</p>
+<p class="p10">b.background = <span class="s6">Color</span>.grey;</p>
+<p class="p10">c.background = <span class="s6">Color</span>.grey;</p>
+<p class="p11"><br></p>
+<p class="p10">d = <span class="s6">JSCUserView</span>(a, <span class="s6">Rect</span>(0, 0, 620, 620));</p>
+<p class="p10">e = <span class="s6">JSCUserView</span>(b, <span class="s6">Rect</span>(0, 0, 40, 630));</p>
+<p class="p10">f = <span class="s6">JSCUserView</span>(c, <span class="s6">Rect</span>(0, 0, 630, 40));</p>
+<p class="p11"><br></p>
+<p class="p10">a.action = { <span class="s6">var</span> origin;</p>
 <p class="p10"><span class="Apple-tab-span">	</span>origin = a.visibleOrigin;</p>
 <p class="p10"><span class="Apple-tab-span">	</span>b.visibleOrigin = 0@(origin.y);</p>
 <p class="p10"><span class="Apple-tab-span">	</span>c.visibleOrigin = (origin.x)@0;</p>
 <p class="p10">};</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">drawFunc = {</p>
-<p class="p10"><span class="Apple-tab-span">	</span>30.do({arg i;</p>
-<p class="p10"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>JPen.fillColor = Color.black;</p>
-<p class="p10"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>JPen.font = JFont("Courier", 9);</p>
-<p class="p10"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>JPen.stringAtPoint( (i+1).asString, (i+1 * 20)@0 );</p>
+<p class="p10"><span class="Apple-tab-span">	</span>30.do({<span class="s6">arg</span> i;</p>
+<p class="p10"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.fillColor = <span class="s6">Color</span>.black;</p>
+<p class="p10"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.font = <span class="s6">JFont</span>(<span class="s9">"Courier"</span>, 9);</p>
+<p class="p10"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.stringAtPoint( (i+1).asString, (i+1 * 20)@0 );</p>
 <p class="p10"><span class="Apple-tab-span">	</span>});</p>
 <p class="p10">};</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">d.drawFunc = {<span class="Apple-converted-space"> </span></p>
-<p class="p10"><span class="Apple-tab-span">	</span>JPen.use({</p>
-<p class="p10"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>JPen.translate(0, 5);</p>
+<p class="p10"><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.use({</p>
+<p class="p10"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.translate(0, 5);</p>
 <p class="p10"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>drawFunc.value;<span class="Apple-converted-space"> </span></p>
 <p class="p10"><span class="Apple-tab-span">	</span>});<span class="Apple-tab-span">	</span></p>
-<p class="p10"><span class="Apple-tab-span">	</span>JPen.translate(15, 0).rotate(0.5pi);<span class="Apple-converted-space"> </span></p>
+<p class="p10"><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.translate(15, 0).rotate(0.5pi);<span class="Apple-converted-space"> </span></p>
 <p class="p10"><span class="Apple-tab-span">	</span>drawFunc.value;</p>
 <p class="p10">};</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">e.drawFunc = {<span class="Apple-converted-space"> <span class="Apple-tab-span">	</span></span></p>
-<p class="p10"><span class="Apple-tab-span">	</span>JPen.translate(40, 0).rotate(0.5pi);<span class="Apple-converted-space"> </span></p>
+<p class="p10"><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.translate(40, 0).rotate(0.5pi);<span class="Apple-converted-space"> </span></p>
 <p class="p10"><span class="Apple-tab-span">	</span>drawFunc.value;</p>
 <p class="p10">};</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">f.drawFunc = {<span class="Apple-converted-space"> </span></p>
-<p class="p10"><span class="Apple-tab-span">	</span>JPen.translate(0, 25);</p>
+<p class="p10"><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.translate(0, 25);</p>
 <p class="p10"><span class="Apple-tab-span">	</span>drawFunc.value;<span class="Apple-converted-space"> </span></p>
 <p class="p10">};</p>
-<p class="p3"><br></p>
+<p class="p11"><br></p>
 <p class="p10">w.front;</p>
-<p class="p10">)</p>
+<p class="p13">)</p>
 </body>
 </html>
