--- a/SuperCollider/Help/SwingOSC/JSCNumberBox.html
+++ b/SuperCollider/Help/SwingOSC/JSCNumberBox.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCNumberBox. last mod: 25-nov-07 sciss
+<p>This class is meant as an emulation of SCNumberBox. last mod: 16-Jan-08 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -53,7 +53,9 @@ b.stringColor = <span class="cl">Color</span>.green;
 b.align = <span class="sy">\center</span>;
 
 <span class="cm">// minimum / maximum number of decimals (works only with SwingOSC!)</span>
+b.value = 3.1;
 b.minDecimals = 2;
+b.value = pi;
 b.maxDecimals = 3;
 
 </pre>
