--- a/SuperCollider/Help/SwingOSC/SwingGUI.html
+++ b/SuperCollider/Help/SwingOSC/SwingGUI.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingGUI &ndash; Java-based GUI classes</h2>
-<p>last mod: 13-Jan-08 sciss
+<p>last mod: 16-Jan-08 sciss
 </p>
 </div>
 <h1>SwingGUI</h1>
@@ -47,6 +47,7 @@ This class provides access to all <A HREF="SwingOSC.html">SwingOSC</A> view clas
 <tr><td><A HREF="JSCHLayoutView.html">JSCHLayoutView</A></td><td>container with children placed horizontally</td></tr>
 <tr><td><A HREF="JSCVLayoutView.html">JSCVLayoutView</A></td><td>container with children placed vertically</td></tr>
 <tr><td><A HREF="JSCCompositeView.html">JSCCompositeView</A></td><td>generic container</td></tr>
+<tr><td><A HREF="JSCScrollView.html">JSCScrollView</A></td><td>container with scrollbars to handle a large virtual viewport</td></tr>
 <tr><td><A HREF="JKnob.html">JKnob</A></td><td>user view that paints a knob / dial button</td></tr>
 <tr><td><A HREF="SwingDialog.html">SwingDialog</A></td><td>file selection dialog management</td></tr>
 <tr><td><A HREF="JSCMultiSliderView.html">JSCMultiSliderView</A></td><td>array of sliders</td></tr>
