--- a/SuperCollider/Help/SwingOSC/JSCFreqScope.html
+++ b/SuperCollider/Help/SwingOSC/JSCFreqScope.html
@@ -12,13 +12,13 @@
 <p>This class is meant as an emulation of SCFreqScope. last mod: 03-oct-06 sciss
 ; for bugs and different behaviour, see also the <A HREF="JStethoscope.html">JStethoscope</A> help file.
 </p>
-<table>
+<!-- <table> -->
 <!-- <tr><td colspan="2" class="oscTabSection">no-op / not working</td></tr> -->
 <!-- <tr><td colspan="2" class="oscTabSection">different behaviour</td></tr> -->
 <!-- <tr><td colspan="2" class="oscTabSection">extended functionality</td></tr> -->
 <!-- <tr><td colspan="2" class="oscTabSection">known issues / todo</td></tr> -->
 <!-- <tr><td class="oscTabKey">file drag</td><td class="oscTabValue">should enable dragging files from the finder (could result in a PathName object)</td></tr> -->
-</table>
+<!-- </table> -->
 </div>
 <h1>JSCFreqScope</h1>
 <p><strong>
