--- a/SuperCollider/Help/SwingOSC/JSCTabbedPane.html
+++ b/SuperCollider/Help/SwingOSC/JSCTabbedPane.html
@@ -42,7 +42,7 @@ A tabbed pane is a container whose children are again containers. The child cont
 <h2>Customizing the tabs</h2>
 <P>The properties of each tab-button are modified using the scheme</P>
 <PRE>
-    <var>&lt;myTabPane&gt;</var>.set&lt;<var>PropertyName&gt;</var>At( <var>&lt;(Integer) tabIndex&gt;</var>, <var>&lgt;propertyValue&gt;</var> );
+    <var>&lt;myTabPane&gt;</var>.set&lt;<var>PropertyName&gt;</var>At( <var>&lt;(Integer) tabIndex&gt;</var>, <var>&lt;propertyValue&gt;</var> );
 </PRE>
 <P><br>where <code>&lt;tabIndex&gt;</code> goes from <code>0</code> to <code>&lt;myTabPane&gt;.numTabs-1</code>. Properties are:</P>
 <table>
