--- a/SuperCollider/Help/SwingOSC/JFont.html
+++ b/SuperCollider/Help/SwingOSC/JFont.html
@@ -22,7 +22,7 @@
 <!-- <tr><td colspan="2" class="oscTabSection">known issues / todo</td></tr> -->
 </table>
 </div>
-<br>
+<P>&nbsp;</P>
 <h1>JFont</h1>
 <p><strong>
 Note: please use the abstraction layer GUI.font if possible! (see <A HREF="SC://GUI">GUI</A>)
