final cleanup, missing help files, missing license files, version bump to 0.58, updated readme

--- a/SuperCollider/Help/SwingOSC/JSCScrollView.html
+++ b/SuperCollider/Help/SwingOSC/JSCScrollView.html
@@ -17,15 +17,15 @@ p.p7 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helve
 p.p8 {margin: 0.0px 0.0px 0.0px 85.0px; text-indent: -85.0px; font: 12.0px Helvetica}
 p.p9 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 14.0px Helvetica}
 p.p10 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco}
-p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #ad1d13}
+p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; color: #9d281b}
 span.s1 {font: 18.0px Helvetica}
-span.s2 {text-decoration: underline ; color: #214fdb}
-span.s3 {text-decoration: underline ; color: #3450aa}
-span.s4 {color: #214fdb}
-span.s5 {color: #3856b9}
-span.s6 {color: #0019ba}
+span.s2 {text-decoration: underline ; color: #2854d6}
+span.s3 {text-decoration: underline ; color: #3853a6}
+span.s4 {color: #2854d6}
+span.s5 {color: #3c59b5}
+span.s6 {color: #0024b5}
 span.s7 {color: #000000}
-span.s8 {color: #ad1d13}
+span.s8 {color: #9d281b}
 span.s9 {color: #606060}
 span.Apple-tab-span {white-space:pre}
 </style>
@@ -104,7 +104,7 @@ span.Apple-tab-span {white-space:pre}
 <p class="p11">// force a 'canvas' size</p>
 <p class="p3"><br></p>
 <p class="p10">(</p>
-<p class="p10"><span class="Apple-tab-span">	</span>a = <span class="s6">JSCWindow</span>.new:</p>
+<p class="p10"><span class="Apple-tab-span">	</span>a = <span class="s6">JSCWindow</span>.new;</p>
 <p class="p10"><span class="Apple-tab-span">	</span>b = <span class="s6">JSCScrollView</span>( a, <span class="s6">Rect</span>( 0, 0, 300, 300 ));</p>
 <p class="p10"><span class="Apple-tab-span">	</span>c = <span class="s6">JSCCompositeView</span>( b, <span class="s6">Rect</span>( 0, 0, 500, 500 )); <span class="s8">// 'canvas' is this big</span></p>
 <p class="p10"><span class="Apple-tab-span">	</span>a.front;</p>
