fixed compatibility with java 1.4. improved SwingOSC:boot. removed JEZSlider, JEZNumber, updated SwingGUI. separate SwingOSC.java field and SwingOptions -> javaOptions field. Using "Tahoma" now as default font on Windows. Setting look-and-feel now for Windows and Linux.

--- a/SuperCollider/Help/SwingOSC/CocoaVsJava.html
+++ b/SuperCollider/Help/SwingOSC/CocoaVsJava.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based cross-platform replacements for Cocoa GUI classes</h2>
-<p>This document lists most of the available classes. last mod: 10-jan-07 sciss
+<p>This document lists most of the available classes. last mod: 28-jan-08 sciss
 </p>
 </div>
 <h1>Cocoa vs. Java GUI classes</h1>
@@ -55,7 +55,7 @@ Besides, there is few missing methods or additional methods in the existing view
 </P>
 <h2>Helper Classes</h2>
 <P>
-Some helper classes work in both contexts : <A HREF="SC://Color">Color</A>, <A HREF="SC://FlowLayout">FlowLayout</A>, <A HREF="SC://Gradient">Gradient</A>
+Some helper classes work in both contexts : <A HREF="SC://EZSlider">EZSlider</A>, <A HREF="SC://EZNumber">EZNumber</A>, <A HREF="SC://EZRanger">EZRanger</A>, <A HREF="SC://Color">Color</A>, <A HREF="SC://FlowLayout">FlowLayout</A>, <A HREF="SC://Gradient">Gradient</A>
 </P>
 <h2>UGen Replacements</h2>
 <P>
