--- a/SuperCollider/Help/SwingOSC/SwingGUI.html
+++ b/SuperCollider/Help/SwingOSC/SwingGUI.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingGUI &ndash; Java-based GUI classes</h2>
-<p>last mod: 16-Jan-08 sciss
+<p>last mod: 28-Jan-08 sciss
 </p>
 </div>
 <h1>SwingGUI</h1>
@@ -28,8 +28,8 @@ This class provides access to all <A HREF="SwingOSC.html">SwingOSC</A> view clas
 <tr><td><A HREF="JSCRangeSlider.html">JSCRangeSlider</A></td><td>interval slider</td></tr>
 <tr><td><A HREF="JSC2DSlider.html">JSC2DSlider</A></td><td>horizontally and vertically moveable slider</td></tr>
 <tr><td><A HREF="JSCTextField.html">JSCTextField</A></td><td>an editable one line text field</td></tr>
-<tr><td><strong><A HREF="JEZSlider.html">JEZSlider</A></strong></td><td><strong>a combo of slider, numberbox and label</strong></td></tr>
-<tr><td><A HREF="JEZNumber.html">JEZNumber</A></td><td>a combo of numberbox and label</td></tr>
+<!-- <tr><td><strong><A HREF="JEZSlider.html">JEZSlider</A></strong></td><td><strong>a combo of slider, numberbox and label</strong></td></tr> -->
+<!-- <tr><td><A HREF="JEZNumber.html">JEZNumber</A></td><td>a combo of numberbox and label</td></tr> -->
 <tr><td><A HREF="JSCListView.html">JSCListView</A></td><td>a list of text items</td></tr>
 <tr><td><A HREF="JSCStaticText.html">JSCStaticText</A></td><td>a text label</td></tr>
 <tr><td><A HREF="JSCNumberBox.html">JSCNumberBox</A></td><td>editable number field</td></tr>
@@ -59,8 +59,8 @@ This class provides access to all <A HREF="SwingOSC.html">SwingOSC</A> view clas
 <tr><td><A HREF="JSCScrollBar.html">JSCScrollBar</A></td><td>slider to navigate virtual viewports</td></tr>
 <tr><td><A HREF="JSCPeakMeterView.html">JSCPeakMeterView</A></td><td>volume level peak meter display</td></tr>
 </table>
-<P><br>A good starting point for learning about the views is <A HREF="JEZSlider.html">JEZSlider</A> (<strong>hightlighted</strong>).
-<P>&nbsp;</P>
+<!-- <P><br>A good starting point for learning about the views is <A HREF="JEZSlider.html">JEZSlider</A> (<strong>hightlighted</strong>).
+</P> --><P>&nbsp;</P>
 <h2>UGen Replacements</h2>
 <P>
 There are replacements for the Mac-only Mouse UGens:
