fixes JSCMultiSlider:valueAction_. Allows nil condition argument to SwingOSC:bootSync

--- a/readme.html
+++ b/readme.html
@@ -88,7 +88,7 @@ TD.when {
 </HEAD>
 <BODY>
 <h1>
-SwingOSC <small>-- version 0.59 (built 28-jan-08) --</small>
+SwingOSC <small>-- version 0.59 (built 29-jan-08) --</small>
 </h1>
 <h3>statement</h3>
 <TABLE><TR><TD VALIGN="top"><IMG SRC="application.png" ALT=""></TD><TD><p>
@@ -205,9 +205,9 @@ The <code>&quot;test&quot;</code> will just launch SwingOSC so you can see if th
 <LI>complete peakmeterview, add some nice stuff like tree view ...</LI>
 </UL>
 <h3>change history</h3>
-<h4>v0.59 (jan 2008 - SVN rev. 48)</h4>
+<h4>v0.59 (jan 2008 - SVN rev. 49)</h4>
 <UL>
-<LI>sc classes: JavaObject (added double underscore syntax, calling prRemove from JSCPlug(Container)View), SwingOSC (separate java field, faster booting), SwingOptions (javaOptions field), SwingGUI (updated), removed JEZSlider, JEZNumber.</LI>
+<LI>sc classes: JavaObject (added double underscore syntax, calling prRemove from JSCPlug(Container)View), SwingOSC (separate java field, faster booting, bootSync fix), SwingOptions (javaOptions field), SwingGUI (updated), JSCMultiSlider (valueAction_ fix), removed JEZSlider, JEZNumber.</LI>
 </UL>
 <h4>v0.58 (jan 2008 - SVN rev. 47)</h4>
 <UL>
