--- a/readme.html
+++ b/readme.html
@@ -205,9 +205,9 @@ The <code>&quot;test&quot;</code> will just launch SwingOSC so you can see if th
 <LI>complete peakmeterview, add some nice stuff like tree view ...</LI>
 </UL>
 <h3>change history</h3>
-<h4>v0.59 (feb 2008 - SVN rev. 55)</h4>
+<h4>v0.59 (feb 2008 - SVN rev. 56)</h4>
 <UL>
-<LI>sc classes: JavaObject (added double underscore syntax, calling prRemove from JSCPlug(Container)View), SwingOSC (separate java field, faster booting, bootSync fix), SwingOptions (javaOptions field), SwingGUI (updated), JSCMultiSlider (valueAction_ fix), JSCPopUpMenu (value_ fix), JSCListView (value_ fix), removed JEZSlider, JEZNumber.</LI>
+<LI>sc classes: JavaObject (added double underscore syntax, calling prRemove from JSCPlug(Container)View), SwingOSC (separate java field, faster booting, bootSync fix), SwingOptions (javaOptions field), SwingGUI (updated), JSCMultiSlider (valueAction_ fix), JSCPopUpMenu (value_ fix), JSCListView (value_ fix), JKnob (was broken), removed JEZSlider, JEZNumber.</LI>
 <LI>java classes: DummyTransferHandler sends file-lists</LI>
 </UL>
 <h4>v0.58 (jan 2008 - SVN rev. 47)</h4>
